# F333-Colors

./: .vscodeignore  CHANGELOG.md  README.md  build.py  makefile  package.json  pyproject.toml  setting.json  vsc-extension-quickstart.md
scripts/: build.py  version.py
src/: colors_blue.json  colors_green.json  colors_red.json  template.jinja  template.json. jinja  token_colors_dark.json
src/colors/: colors_blue.json  colors_blue_pastel.json  colors_cyan.json  colors_green.json  colors_orange.json  colors_plum.json  colors_red.json  colors_turquoise_pastel.json
src/editor/: token_colors_dark.json
src/git/: git_basic.json  git_dark.json  git_dark_pastel.json
src/template/: package.json.jinja  template.jinja  template_inverted_tab.jinja
themes/: F333 Colors-color-theme.json  f333 colors blue-color-theme.json  f333 colors cyan-color-theme.json  f333 colors green-color-theme.json  f333 colors orange-color-theme.json  f333 colors pastel-blue-color-theme.json  f333 colors pastel-turquoise-color-theme.json  f333 colors plum-color-theme.json  f333 colors red-color-theme.json
