[tool.poetry]
name = "f333-colors"
version = "0.1.0"
description = ""
authors = ["Fundor333 <fundor333@fundor333.com>"]
readme = "README.md"
packages = [{include = "f333_colors"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
